fixed scrollbar display in gallery, troubleshooting deployed app

--- a/client/src/sass/layout/_container.scss
+++ b/client/src/sass/layout/_container.scss
@@ -19,7 +19,7 @@
 		url(../BG.png);
 	background-attachment: fixed;
 	border-radius: 2px;
-	overflow-y: scroll;
+	overflow-y: auto;
 
 	/* width */
 	&::-webkit-scrollbar {
